--- a/boot/data/data-mybatis/data-mybatis-query/src/main/resources/application.properties
+++ b/boot/data/data-mybatis/data-mybatis-query/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=spring.boot.data.mybatis.po
+mybatis.type-aliases-package=spring.boot.data.mybatis
+mybatis.type-handlers-package=spring.boot.data.mybatis.handler
 
