--- a/boot/data/data-mybatis/data-mybatis-base/src/main/resources/application.properties
+++ b/boot/data/data-mybatis/data-mybatis-base/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 server.port=8080
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# 映射路径
 mybatis.mapper-locations=classpath:mapper/*.xml
+# 配置别名包
 mybatis.type-aliases-package=spring.boot.data.mybatis.po
+# 配置日志实现类
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
