--- a/boot/data/data-mybatis/data-mybatis-query/src/main/resources/application.properties
+++ b/boot/data/data-mybatis/data-mybatis-query/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=spring.boot.data.mybatis
 mybatis.type-handlers-package=spring.boot.data.mybatis.handler
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
