--- a/boot/data/data-mybatis/data-mybatis-base/src/main/resources/application.properties
+++ b/boot/data/data-mybatis/data-mybatis-base/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 server.port=8080
+# 数据库账号
 spring.datasource.username=root
+# 数据库密码
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useSSL=true
+# 数据库路径
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useSSL=true
+# 数据库驱动
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 映射路径
 mybatis.mapper-locations=classpath:mapper/*.xml
