--- a/boot/data/data-mybatis/data-mybatis-annotation/src/main/resources/application.properties
+++ b/boot/data/data-mybatis/data-mybatis-annotation/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.type-aliases-package=spring.boot.data.mybatis.po
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
