--- a/cloud/netflix/netflix-feign/netflix-feign-base/src/main/resources/application.properties
+++ b/cloud/netflix/netflix-feign/netflix-feign-base/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 # 服务名称
-spring.application.name=eureka-consumer
+spring.application.name=eureka-client
 # 实例ID
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 # 告知服务端30秒还未收到心跳的话，就将该服务移除列表，默认90秒
