--- a/cloud/eureka/eureka-service-cluster/pom.xml
+++ b/cloud/eureka/eureka-service-cluster/pom.xml
@@ -8,7 +8,7 @@
         <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>spirng.cloud</groupId>
+    <groupId>spirng.cloud.eureka</groupId>
     <artifactId>eureka-service-cluster</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eureka-service-cluster</name>
@@ -17,6 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR5</spring-cloud.version>
+        <docker.image.prefix>demo</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -51,10 +52,20 @@
     </dependencyManagement>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.4.14</version>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <dockerDirectory>src</dockerDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
