--- a/component/docker/docker-base/src/main/resources/docker/Dockerfile
+++ b/component/docker/docker-base/src/main/resources/docker/Dockerfile
@@ -1,4 +1,3 @@
 FROM openjdk:8-jdk-alpine
-VOLUME /tmp
-ADD docker-base/target/docker-base.jar app.jar
+COPY docker-base.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
