--- a/cloud/eureka/eureka-service-cluster/pom.xml
+++ b/cloud/eureka/eureka-service-cluster/pom.xml
@@ -57,6 +57,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>${basedir}/target/docker</outputDirectory>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.spotify</groupId>
@@ -64,7 +67,7 @@
                 <version>0.4.14</version>
                 <configuration>
                     <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-                    <dockerDirectory>src</dockerDirectory>
+                    <dockerDirectory>${basedir}/src/main/resources/docker</dockerDirectory>
                 </configuration>
             </plugin>
         </plugins>
