--- a/cloud/netflix/netflix-feign-service/pom.xml
+++ b/cloud/netflix/netflix-feign-service/pom.xml
@@ -10,12 +10,13 @@
     </parent>
     <groupId>spring.cloud.netflix</groupId>
     <artifactId>netflix-feign-service</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.5-SNAPSHOT</version>
     <name>netflix-feign-service</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR5</spring-cloud.version>
+        <docker.image.prefix>demo</docker.image.prefix>
     </properties>
     <dependencies>
 
@@ -53,6 +54,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -77,6 +79,22 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>${basedir}/target/docker</outputDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.4.14</version>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <dockerDirectory>${basedir}/src/main/resources/docker</dockerDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
