--- a/cloud/netflix/netflix-feign-service/src/main/resources/application.properties
+++ b/cloud/netflix/netflix-feign-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8021
 # 服务名称
 spring.application.name=eureka-feign-service
 # 实例ID
@@ -8,4 +8,4 @@ eureka.instance.lease-expiration-duration-in-seconds=30
 # 每隔10s发送一次心跳，默认30秒
 eureka.instance.lease-renewal-interval-in-seconds=10
 # 服务注册
-eureka.client.service-url.defaultZone=http://localhost:8011/eureka/,http://localhost:8012/eureka/
+eureka.client.service-url.defaultZone=http://host.docker.internal:8011/eureka/,http://host.docker.internal:8012/eureka/
