--- a/cloud/netflix/netflix-feign-service/src/main/resources/application.properties
+++ b/cloud/netflix/netflix-feign-service/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8021
 spring.application.name=eureka-feign-service
 # 实例ID
 eureka.instance.instance-id=${spring.application.name}:${server.port}
+# 实例域名(宿主的域名)
+eureka.instance.hostname=localhost
 # 告知服务端30秒还未收到心跳的话，就将该服务移除列表，默认90秒
 eureka.instance.lease-expiration-duration-in-seconds=30
 # 每隔10s发送一次心跳，默认30秒
