--- a/cloud/netflix/netflix-feign-service/src/main/resources/application.properties
+++ b/cloud/netflix/netflix-feign-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8021
 # 服务名称
-spring.application.name=eureka-feign-service
+spring.application.name=feign-service
 # 实例ID
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 # 实例域名(宿主的域名)
