--- a/cloud/netflix/netflix-feign-client/pom.xml
+++ b/cloud/netflix/netflix-feign-client/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>spring.cloud.netflix</groupId>
             <artifactId>netflix-feign-service</artifactId>
-            <version>0.0.4-SNAPSHOT</version>
+            <version>0.0.6</version>
         </dependency>
 
     </dependencies>
